# kvs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: rust.yml
debian/: changelog  control  copyright  install
proto/: kvs.proto
src/kvsc/: main.rs
src/kvsd/: file_store.rs  grpc.rs  json_store.rs  main.rs  store.rs
src/kvsd/store/: file_store.rs  json_store.rs  mod.rs  store_actions.rs
src/tests/: integration.rs  mod.rs  performance.rs  test_utils.rs
src/tests/data/: test_config_file.ini
src/utils/: crypto.rs  filesystem_wrapper.rs  input_validation.rs  log.rs  mod.rs
test/: init_kvsd.sh  performace_1k.sh  performance_10k.sh
tests/: init_kvsd.sh  integration.rs
