#  kvs Cargo.toml
#  SPDX-License-Identifier: MIT
#  Copyright (C) 2020 Benjamin Schilling

[package]
name = "kvs"
description = "Secure Key Value Store"
version = "0.1.0"
authors = ["Benjamin Schilling <benjamin.schilling33@gmail.com>"]
edition = "2018"
publish = false
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils/mod.rs"

[[bin]]
name = "kvsd"
path = "src/kvsd/main.rs"

[[bin]]
name = "kvsc"
path = "src/kvsc/main.rs"

[[test]]
name = "tests"
path = "src/tests/mod.rs"


[dependencies]
tonic = { version = "0.3", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"

# Command line
clap = "2.33.3"
ctrlc = "3.1.7"

# Input validation
lazy_static = "1.4.0"
regex = "1.3.9"

# Linked blocking queue
two-lock-queue = "0.1.1"

# Crypto
rand= "0.7.3"
sha3 = "0.9.1"
aes-gcm-siv = "0.9.0"

# En-/Decoding
base64 = "0.13.0"

[dev-dependencies]
file_diff = "1.0.0"

[build-dependencies]
tonic-build = "0.3"

[profile.release]
panic = 'abort'
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1